--- a/package.json
+++ b/package.json
@@ -33,7 +33,13 @@
     "url-search-params-polyfill": "^1.3.0"
   },
   "devDependencies": {
+    "@types/express": "^4.11.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "babel-register": "^6.11.6",
     "enzyme": "^2.8.2",
+    "nodemon": "^1.14.7",
     "react-addons-test-utils": "15.4.2",
     "react-scripts": "0.9.5",
     "react-test-renderer": "15.4.2",
@@ -44,7 +50,10 @@
   "scripts": {
     "start": "nf start -j Procfile.dev",
     "start-ui": "PORT=3000 react-scripts start",
+    "start-backend": "nodemon src/server/index.js --exec babel-node",
     "build": "react-scripts build",
+    "build-backend": "babel src/server -d dist",
+    "serve-backend": "node dist/index.js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "flow": "flow"
